--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --watch --progress"
+    "dev": "webpack-dev-server --watch --progress"
   },
   "keywords": [],
   "author": "",
